# toy_rust_web_service

./: Cargo.toml  README.md  docker-compose.yaml
src/: main.rs  users.rs
src/users/: app.rs  repo.rs  service.rs
src/users/app/: core.rs  dtos.rs  errors.rs  state.rs
src/users/repo/: dynamodb.rs  errors.rs
src/users/service/: core.rs  errors.rs  idos.rs
