[package]
name = "toy_rust_web_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = {version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
aws-sdk-dynamodb = "1.78.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "env-filter"] }
thiserror = "2.0.12"
aws-smithy-runtime-api = "1.8.0"
async-trait = "0.1"
